// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section renders collapsible initially collapsed 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="pt-8 [&>_:last-child:not(:first-child)]:mt-6 pb-8"
    >
      <div
        class="flex pb-0"
        data-testid="header"
      >
        <div
          class="PicassoContainer-flex ml-auto"
          data-testid="actions"
        >
          <button
            aria-disabled="false"
            class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer rounded-full p-0 w-[1.5em] h-[1.5em] border-none text-graphite hover:bg-gray active:bg-gray focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] bg-transparent"
            data-component-type="button"
            data-testid="collapse"
            role="button"
            tabindex="0"
            type="button"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
            >
              <svg
                class="PicassoSvgArrowDownMinor16-root text-[1.2em] flex-1 Rotate180-transition"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section renders collapsible initially expanded 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="pt-8 [&>_:last-child:not(:first-child)]:mt-6"
    >
      <div
        class="flex"
        data-testid="header"
      >
        <div
          class="PicassoContainer-flex ml-auto"
          data-testid="actions"
        >
          <button
            aria-disabled="false"
            class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer rounded-full p-0 w-[1.5em] h-[1.5em] border-none text-graphite hover:bg-gray active:bg-gray focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] bg-transparent"
            data-component-type="button"
            data-testid="collapse"
            role="button"
            tabindex="0"
            type="button"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
            >
              <svg
                class="PicassoSvgArrowDownMinor16-root text-[1.2em] flex-1 Rotate180-transition Rotate180-rotate180"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="w-full"
        >
          <div
            class=""
          >
            <div
              data-testid="content"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section renders with title, subtitle, actions and content 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="pt-8 [&>_:last-child:not(:first-child)]:mt-6"
    >
      <div
        class="flex"
        data-testid="header"
      >
        <h3
          class="m-0 text-lg text-black font-semibold !mr-4 min-w"
          data-testid="title"
        >
          Title
        </h3>
        <p
          class="m-0 text-md text-graphite font-regular self-center !mr-4 min-w"
          data-testid="subtitle"
        >
          Subtitle
        </p>
        <div
          class="PicassoContainer-flex ml-auto"
          data-testid="actions"
        >
          Actions
        </div>
      </div>
      <div
        class="flex"
      >
        <div
          class="w-full"
        >
          <div
            class=""
          >
            <div
              data-testid="content"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section renders without header 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="pt-8 [&>_:last-child:not(:first-child)]:mt-6"
    >
      <div
        class="flex"
      >
        <div
          class="w-full"
        >
          <div
            class=""
          >
            <div
              data-testid="content"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
